tests/files/type_checker_tests/should_fail/014.cmdr
//Should fail when doing post increment on something that isn't a float or int
a = true;
x = a++;